# rb-road-network

./: .bash_history  .directory  .docker.env  .envrc  .gdb_history  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  batch_inputs.csv  build.sh  default.nix  docker-compose.yml  docker_build.sh  docker_run.sh  export-qgis-docker-image-qcow2.sh  flake.nix  gis_osm_roads_updates.aria2  nix-shell.nix  oci-container.nix  output  package-lock.json  pyproject.toml  requirements.txt  v1.5.0.tar.gz.1  version.txt
.config/: QtProject.conf
.github/: copilot-instructions.md
.trunk/: trunk.yaml
docker/: Dockerfile  docker.envrc
helm-chart/: Chart.yaml
include/: geom.hpp  graph.hpp  grid.hpp  gridimg_utils.hpp  gui.hpp  places.hpp  plot.hpp  plot_gltxt.hpp  pre_gui.hpp  rbtypes.hpp  scripts.hpp  shader_utils.hpp  threadpool.hpp  thrust_rb.hpp  utils.hpp
opencode-sessions/: session-ses_38fb.md
output/: BattelleResults.json  BattelleResults.sh  BattelleResults.txt  DickensHancockResult.json  DickensHancockResult.txt  DiggsSouthSandResult.json  DiggsSouthSandResult.sh  DiggsSouthSandResult.txt  DiggsSouthSandResultFixed.json  DiggsSouthSandResultFixed.sh  DiggsSouthSandResultFixed.txt  JunctionHill.json  JunctionHill.txt  JunctionHillQuarry-MarketAreaMap.pgw  KnoxEnterprises.json  KnoxEnterprises.txt  LontracPolkCounty-FinalMarketAreaMap-Railroads.pgw  LontracPolkCounty-FinalMarketAreaMap-Railroads_zoomOut.pgw  LontracPolkCounty-FinalMarketAreaMap-Railroads_zoomWayOut_Transparent.pgw  LontracPolkCounty-FinalMarketAreaMap.pgw  LontracPolkCounty-FinalMarketAreaMap_zoomOut.pgw  LontracPolkCounty.json  LontracPolkCounty.txt  Megel-2022.json  Megel-2022.txt  PigeonPointResult.json  PigeonPointResult.sh  PigeonPointResult.txt  RobinRidgeResult.json  RobinRidgeResult.sh  RobinRidgeResult.txt  SavannaLatestResult.json  SavannaLatestResult.sh  SavannaLatestResult.txt  SavannaLatestResult2.json  SavannaLatestResult3.json  SavannaLatestResult3.txt  SavannaLatestResult4.json  SavannaLatestResult5.json  SavannaShoals-FinalMarketAreaMap-counties.pgw  (+22 more)
qgis-z38s-atl/: cloud-config
qgis_docker/: Dockerfile  docker_build_qgis-server.sh
rb_road_network/: cli.py
rb_roads_api/: Dockerfile  README.md  api.py  pyproject.toml
rb_roads_api/config/: utils.py
rb_roads_api/notebooks/: compare_latlon_utm_coordinate_reprs.ipynb
rb_roads_api/rb_roads_api/: api.py  cli.py  convert_coords.py
rb_roads_api/rb_roads_api/config/: utils.py
rb_roads_api/www/templates/: index.html
render_scripts/: render_plotly.py
resources/: AoA.glade  AoA_GL.glade  gis_osm_roads_SINGLE_update.aria2  gis_osm_roads_updates.aria2  text.f.glsl
roads_rb_gui/: go.mod  go.sum  main.go
scripts/: DownloadOSMshps.py  _old-download-gis-osm-roads.py  _prebuild_setup.sh  backup-gis-osm-roads.sh  build_scripts.sh  climdiv2shp.py  convert-compose2nix.sh  convert_shp2parquet.py  createGeoTIFF.py  dl_homr_csvs.py  download-gis-osm-roads.py  download-gis-osm-roads.sh  download_rb_data.sh  fix_county_pop_csvs.py  font2png  hf-load-county-population-data.py  install_shapelib.sh  nvcc_wrapper  ogr2ogr_concat_shpfiles  ogr2ogr_concat_shpfiles.py  ogr2ogr_reproject_wgs84_to_nad83  (+13 more)
(+138 files in other folders)
