[project]
name = "rb-road-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aria2p>=0.12.1",
    "click>=8.3.1",
    "gdal<3.12.1",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "plotly>=6.5.0",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]

[tool.setuptools]
include-package-data = true
packages = [
    "rb_road_network",
]

[build-system]
requires = ["hatchling", "wheel", "setuptools"]
build-backend = "hatchling.build"
