[tool.poetry]
packages = [
    { include = "rb_roads_api", from = "." }
]
name = "roads-rb-api"
version = "0.1.0"
description = "api interface for rb-road-network"
authors = ["Robbie Capps <rocapp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
docker = "^7.0.0"
jinja2 = "^3.1.2"
redis = "^5.0.1"
plotly = "^5.18.0"
pandas = "^2.1.4"
click = "^8.1.7"
textual = "^0.63.6"
rich = "^13.7.1"
trogon = "^0.5.0"
pyproj = "^3.6.1"
matplotlib = "^3.9.0"
geopy = "^2.4.1"
ipywidgets = "^8.1.3"
ipython = "^8.25.0"
ipykernel = "^6.29.4"

[tool.poetry.scripts]
rb-roads-api = "rb_roads_api.cli:cli"
run-rb-roads-api = "rb_roads_api.cli:runserver"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
